# roos

./: .env.example  .gitignore  Cargo.toml  PROGRESS.md  README.md  prompt.txt  roos_srs.md
crates/roos/: Cargo.toml
crates/roos-cli/: Cargo.toml
crates/roos-cli/src/: main.rs
crates/roos-cli/src/cmd/: list.rs  mod.rs  new.rs  run.rs  serve.rs
crates/roos-core/: Cargo.toml
crates/roos-core/src/: agent.rs  bus.rs  config.rs  error.rs  lib.rs  memory.rs  provider.rs  supervisor.rs  tool.rs  types.rs
crates/roos-macros/: Cargo.toml
crates/roos-macros/src/: lib.rs
crates/roos-macros/tests/: tool_macro.rs
crates/roos-memory/: Cargo.toml
crates/roos-memory/src/: in_memory.rs  lib.rs  sled_store.rs
crates/roos-observability/: Cargo.toml
crates/roos-observability/src/: lib.rs  logging.rs
crates/roos-orchestrator/: Cargo.toml
crates/roos-orchestrator/src/: lib.rs  loop_.rs  prompt.rs  state.rs  validate.rs
crates/roos-providers/: Cargo.toml
crates/roos-providers/src/: anthropic.rs  cohere.rs  groq.rs  lib.rs  openai.rs  qwen.rs
crates/roos-scheduler/: Cargo.toml
crates/roos-scheduler/src/: error.rs  lib.rs  scheduler.rs  task.rs
crates/roos-tools/: Cargo.toml
crates/roos-tools/src/: fs.rs  http.rs  lib.rs  shell.rs  web.rs
crates/roos-trigger/: Cargo.toml
crates/roos-trigger/src/: auth.rs  lib.rs  server.rs  webhook.rs
crates/roos/src/: lib.rs
