[package]
name = "roos-memory"
description = "ROOS memory backends: in-memory, Sled embedded store, Qdrant vector store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["memory-sled"]
memory-sled = []
memory-qdrant = []

[dependencies]
async-trait = "0.1"
roos-core = { path = "../roos-core" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
