[package]
name = "roos-memory"
description = "ROOS memory backends: in-memory, Sled embedded store, Qdrant vector store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["memory-sled"]
memory-sled = ["sled", "serde_json"]
memory-qdrant = []

[dependencies]
async-trait = "0.1"
roos-core = { path = "../roos-core" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
sled = { version = "0.34", optional = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "time"] }
