[package]
name = "roos-observability"
description = "ROOS observability: structured logging, OpenTelemetry tracing, Prometheus metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
roos-core = { path = "../roos-core" }
