[package]
name = "roos-orchestrator"
description = "ROOS orchestration engine: AgentState machine and reasoning loop (Layer 3)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
roos-core = { path = "../roos-core" }
