[package]
name = "roos-orchestrator"
description = "ROOS orchestration engine: AgentState machine and reasoning loop (Layer 3)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
roos-core = { path = "../roos-core" }
serde_json = "1"

[dev-dependencies]
async-trait = "0.1"
roos-memory = { path = "../roos-memory" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
