[package]
name = "roos-scheduler"
description = "ROOS scheduler engine: cron and one-shot task scheduling (Layer 2)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
roos-core = { path = "../roos-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
