[package]
name = "roos-tools"
description = "ROOS standard tool belt: file I/O, shell execution, HTTP"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
tools-fs = []
tools-shell = []
tools-http = []
tools-web = []

[dependencies]
async-trait = "0.1"
roos-core = { path = "../roos-core" }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
