[package]
name = "roos-tools"
description = "ROOS standard tool belt: file I/O, shell execution, HTTP"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
tools-fs = []
tools-http = ["reqwest"]
tools-shell = []
tools-web = ["reqwest"]

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"], optional = true }
roos-core = { path = "../roos-core" }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
