[package]
name = "roos-trigger"
description = "ROOS trigger engine: Axum HTTP server and webhook handlers (Layer 1)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.7"
roos-core = { path = "../roos-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tower = { version = "0.4", features = ["util"] }
